--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
         <img src="img/logo.png" alt="Travelo" class="logo" />
         <ul>
           <li>
-            <a href="/login/index.html">Login</a>
+            <a href="/login/login.html">Login</a>
           </li>
           <li>
-            <a href="/login/index.html">Sign up</a>
+            <a href="/login/login.html">Sign up</a>
           </li>
           <li class="search">
             <a href="#">
