--- a/login/login.html
+++ b/login/login.html
@@ -117,7 +117,7 @@
         // Menambahkan event listener untuk mengarahkan ke halaman "parallax.html" ketika tombol "Login" diklik
         loginButton.addEventListener("click", function (event) {
           event.preventDefault(); // Untuk mencegah form submit (jika form di dalam tag <form>)
-          window.location.href = "/parallax.html";
+          window.location.href = "/index.html";
         });
       });
     </script>
